[gd_scene load_steps=16 format=3 uid="uid://iedfoi6jhgvc"]

[ext_resource type="Script" uid="uid://cjv26wst4cbfc" path="res://scenes/game_scene.gd" id="1_onqr8"]
[ext_resource type="PackedScene" uid="uid://bx5l6q5outjxn" path="res://scenes/document_base.tscn" id="2_ycayy"]
[ext_resource type="Script" uid="uid://v65pvda1q6en" path="res://resources/document_data.gd" id="3_bw6k5"]
[ext_resource type="PackedScene" uid="uid://dvny075pwvmg2" path="res://scenes/dialogue_balloon/balloon.tscn" id="4_kk2rg"]
[ext_resource type="Texture2D" uid="uid://bktbekrb2qic4" path="res://assets/artwork/desk.png" id="5_b5spy"]
[ext_resource type="PackedScene" uid="uid://dwwdk70phcvu4" path="res://scenes/outbox_2d.tscn" id="5_y3j0m"]
[ext_resource type="Texture2D" uid="uid://c4dcxp3wv4sfa" path="res://assets/images/furnace.png" id="6_rurhu"]
[ext_resource type="PackedScene" uid="uid://3t8lt7eqxsm3" path="res://scenes/inbox_2d.tscn" id="7_utbpp"]
[ext_resource type="Texture2D" uid="uid://bo7tvg063ojd5" path="res://assets/images/warp-pipe.png" id="9_utbpp"]

[sub_resource type="Resource" id="Resource_y3j0m"]
script = ExtResource("3_bw6k5")
is_processable = true
is_messageable = false
is_dangerous = false
special_flags = Array[String]([])
content = "Everything is fine."
metadata/_custom_type_script = ExtResource("3_bw6k5")

[sub_resource type="Resource" id="Resource_rurhu"]
script = ExtResource("3_bw6k5")
is_processable = true
is_messageable = false
is_dangerous = false
special_flags = Array[String]([])
content = "There's nothing to worry about!"
metadata/_custom_type_script = ExtResource("3_bw6k5")

[sub_resource type="Resource" id="Resource_kk2rg"]
script = ExtResource("3_bw6k5")
is_processable = true
is_messageable = false
is_dangerous = false
special_flags = Array[String]([])
content = "It's okay to let the government handle it!"
metadata/_custom_type_script = ExtResource("3_bw6k5")

[sub_resource type="Resource" id="Resource_b5spy"]
script = ExtResource("3_bw6k5")
is_processable = true
is_messageable = false
is_dangerous = true
special_flags = Array[String]([])
content = "We're living under a dictator. Revolt!"
metadata/_custom_type_script = ExtResource("3_bw6k5")

[sub_resource type="Resource" id="Resource_utbpp"]
script = ExtResource("3_bw6k5")
is_processable = true
is_messageable = false
is_dangerous = true
special_flags = Array[String]([])
content = "Evidence of wrongdoing by members of current administration."
metadata/_custom_type_script = ExtResource("3_bw6k5")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_utbpp"]
size = Vector2(128, 128)

[node name="GameScene" type="Node"]
script = ExtResource("1_onqr8")
document_scene = ExtResource("2_ycayy")
documents = Array[ExtResource("3_bw6k5")]([SubResource("Resource_y3j0m"), SubResource("Resource_rurhu"), SubResource("Resource_kk2rg"), SubResource("Resource_b5spy"), SubResource("Resource_utbpp")])
dialogue_balloon_scene = ExtResource("4_kk2rg")

[node name="Rules" type="Node" parent="."]
unique_name_in_owner = true

[node name="Desk" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("5_b5spy")
centered = false

[node name="Inbox2D" parent="." instance=ExtResource("7_utbpp")]
unique_name_in_owner = true
position = Vector2(87, 332)

[node name="Outboxes" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="ArchiveHole" parent="Outboxes" instance=ExtResource("5_y3j0m")]
unique_name_in_owner = true
position = Vector2(553, 227)

[node name="Furnace" parent="Outboxes" instance=ExtResource("5_y3j0m")]
unique_name_in_owner = true
position = Vector2(575, 64)
metadata/_edit_group_ = true

[node name="Sprite2D" parent="Outboxes/Furnace" index="0"]
texture = ExtResource("6_rurhu")

[node name="MessagePipe" parent="Outboxes" instance=ExtResource("5_y3j0m")]
unique_name_in_owner = true
position = Vector2(339, 64)
metadata/_edit_group_ = true

[node name="Sprite2D" parent="Outboxes/MessagePipe" index="0"]
visible = true
texture = ExtResource("9_utbpp")

[node name="CollisionShape2D" parent="Outboxes/MessagePipe/Area2D" index="0"]
shape = SubResource("RectangleShape2D_utbpp")

[node name="Container" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="ActiveContainer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="ScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="CheatSkipLevel" type="Button" parent="."]
offset_left = 539.0
offset_top = 321.0
offset_right = 631.0
offset_bottom = 352.0
text = "SKIP LEVEL"

[connection signal="document_processed" from="Outboxes/ArchiveHole" to="." method="_on_outbox_2d_document_processed"]
[connection signal="document_processed" from="Outboxes/Furnace" to="." method="_on_furnace_2d_document_processed"]
[connection signal="document_processed" from="Outboxes/MessagePipe" to="." method="_on_message_pipe_document_processed"]
[connection signal="pressed" from="CheatSkipLevel" to="." method="_on_cheat_skip_level_pressed"]

[editable path="Outboxes/Furnace"]
[editable path="Outboxes/MessagePipe"]
